examples/test/testpolicy8707.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8707
  namespace: namespace35
spec:
  podSelector:
    matchLabels:
      key41: value41
      key1: value33
      key7: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value19
          key2: value21
          key40: value1
      podSelector:
        matchLabels:
          key19: value9
          key42: value8
